# OpenStage

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  example-song.json  generate-icon.cjs  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: PptxHtmlFrame.tsx
src/lib/: events.ts  formatTime.ts  github.ts  pptxHtml.ts  spotify.ts
src/operator/: Header.tsx  MusicOverlay.tsx  OperatorApp.tsx  Sidebar.tsx
src/operator/tabs/: CountdownTab.tsx  DisplayTab.tsx  MediaTab.tsx  MusicTab.tsx  ShowTab.tsx  SlidesTab.tsx  SongsTab.tsx  VideoTab.tsx
src/output/: OutputApp.tsx  OutputRenderer.tsx
src/store/: useStore.ts
src/types/: index.ts
