[package]
name = "openstage"
version = "0.2.0"
description = "OpenStage – Open source presentation software for live events"
authors = ["OpenStage Contributors"]
license = "GPL-3.0"
repository = "https://github.com/your-username/openstage"
edition = "2021"

[lib]
name = "openstage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
